# wordsynk-snatcher

./: .gitignore  Cargo.toml  HELLO_FROM_GROK.txt  README.md  docker-compose.yml  moj_mitmweb_forwarder.js  package-lock.json  package.json  patch.diff  tsconfig.json
.gemini-config/: AGENT_METRICS.yaml  APP_INTERNALS.md  ARCHITECTURE.md  BOOKING_SCHEMA.json  DEBUGGING_PROTOCOLS.md  DECISION_RECORD.md  FRIDA_AVD_HANDOVER.md  GIT_PATCH_RULES.yaml  POST_MORTEM.md  WORKFLOW_RULES.md
.github/workflows/: ci.yml
apks/: split_config.en.apk  split_config.xhdpi.apk
docs/: architecture.md  threat-model.md
python-orchestrator/: bookings.sqlite  package-lock.json  package.json  patch.diff  pyproject.toml  tsconfig.json
python-orchestrator/src/: main.py
python-orchestrator/src/adb_controller/: tap_engine.py
python-orchestrator/src/config/: loader.py
python-orchestrator/src/frida_hooks/: frida-env.d.ts  offer_logger.js  offer_logger.ts
python-orchestrator/src/humaniser/: delays.py
python-orchestrator/src/storage/: db.py
python-orchestrator/src/wordsynk_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rust-core/snatcher-decision/: Cargo.toml
rust-core/snatcher-decision/src/: lib.rs
rust-core/snatcher-decision/tests/: decision.rs
rust-core/wordsynk-ghost/: .env.example  .env.swp  Cargo.toml  patch.diff
rust-core/wordsynk-ghost/src/: headers.rs  main.rs  storage.rs
