[package]
name = "wordsynk-ghost"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
    "gzip",
] }
tokio = { version = "1", features = ["full"] }
bson = { version = "2.7", features = ["chrono-0_4"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
mongodb = "2.7"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
